--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
 
 // =============== VARIABLES CSS ===============
 $header-height: 3rem;
@@ -7,13 +7,13 @@ $header-height: 3rem;
 //---------- Colors ----------
 /*========== Variables for dark/light mode ==========*/
 :root {
-   --title-color: #393939;
-   --text-color: #707070;
-   --body-color: #fbfefd;
-   --header-color: #f0f0f0;
-   --container-color: #fff;
-   --footer-color: #afafaf;
-   --accordion-color: #e2fde8;
+  --title-color: #393939;
+  --text-color: #707070;
+  --body-color: #fbfefd;
+  --header-color: #f0f0f0;
+  --container-color: #fff;
+  --footer-color: #afafaf;
+  --accordion-color: #e2fde8;
 }
 
 $first-color: #16983f;
@@ -22,9 +22,8 @@ $text-color-light: #a6a6a6;
 $copy-color: #3b3c3c;
 
 //---------- Font and typography ----------
-$body-font: 'Montserrat', sans-serif;
+$body-font: "Montserrat", sans-serif;
 $biggest-font-size: 2.25rem;
-$h1-font-size: 1.5rem;
 $h2-font-size: 1.25rem;
 $h3-font-size: 1rem;
 $normall-font-size: 0.938rem;
